[project]
name = "tsutil"
dynamic = ["version"]
description = "TrainScanner Utility"
authors = [
    {name = "yamakox",email = "yamakox@gmail.com"}
]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta", 
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "wxpython (>=4.2.3)",
    "numpy (>=2.2.0,<3.0.0)",
    "opencv-python-headless (>=4.11.0,<5.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "numba (>=0.61.0,<0.62.0)",
    "pydantic (>=2.11.0,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "fffio (>=0.6.0,<0.7.0)",
]

[project.urls]
"Homepage" = "https://github.com/yamakox/tsutil"

[project.scripts]
tsutil = "tsutil:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
packages = [{include = "tsutil", from = "src"}]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
pattern = '(?P<base>\d+\.\d+\.\d+)'
